--- a/auth.html
+++ b/auth.html
@@ -1,29 +1,77 @@
-<!-- auth.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sign In</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
-    <h2 class="text-2xl font-bold text-center text-green-700 mb-6">EOD Report Login</h2>
-    
-    <input id="email" type="email" placeholder="Email"
-           class="mb-3 w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-green-500" />
-    <input id="password" type="password" placeholder="Password"
-           class="mb-4 w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-green-500" />
-    
-    <button id="signInBtn"
-            class="bg-green-500 text-white w-full py-2 rounded hover:bg-green-600 mb-2">Sign In</button>
-    <button id="signUpBtn"
-            class="bg-gray-200 text-gray-800 w-full py-2 rounded hover:bg-gray-300">Register</button>
+import { auth } from './firebase-config.js';
+import {
+  signInWithEmailAndPassword,
+  createUserWithEmailAndPassword
+} from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
 
-    <p id="authMessage" class="text-sm text-red-500 text-center mt-4 hidden"></p>
-  </div>
+// DOM Elements
+const step1 = document.getElementById('step-1');
+const step2 = document.getElementById('step-2');
+const emailEl = document.getElementById('email');
+const passwordEl = document.getElementById('password');
+const signInBtn = document.getElementById('signInBtn');
+const startRegisterBtn = document.getElementById('startRegisterBtn');
+const completeRegisterBtn = document.getElementById('completeRegisterBtn');
+const messageEl = document.getElementById('authMessage');
 
-  <script type="module" src="auth.js"></script>
-</body>
-</html>
+// Start Register Flow (Step 1)
+startRegisterBtn.addEventListener('click', () => {
+  const email = emailEl.value.trim();
+  const password = passwordEl.value.trim();
+
+  if (!email || !password) {
+    showMessage('Enter email and password to continue.');
+    return;
+  }
+
+  createUserWithEmailAndPassword(auth, email, password)
+    .then((userCredential) => {
+      const uid = userCredential.user.uid;
+      localStorage.setItem('temp-uid', uid); // Temporarily store UID
+      step1.classList.add('hidden');
+      step2.classList.remove('hidden');
+    })
+    .catch(err => showMessage(err.message));
+});
+
+// Finish Register (Step 2)
+completeRegisterBtn.addEventListener('click', () => {
+  const name = document.getElementById('register-name').value.trim();
+  const client = document.getElementById('register-client').value.trim();
+  const position = document.getElementById('register-position').value.trim();
+  const uid = localStorage.getItem('temp-uid');
+
+  if (!name || !client || !position) {
+    showMessage('Please fill out all fields.');
+    return;
+  }
+
+  if (uid) {
+    localStorage.setItem(`profile-${uid}`, JSON.stringify({ name, client, position }));
+    localStorage.removeItem('temp-uid');
+    window.location.href = 'index.html';
+  } else {
+    showMessage("Something went wrong. Try again.");
+  }
+});
+
+// Sign In
+signInBtn.addEventListener('click', () => {
+  const email = emailEl.value.trim();
+  const password = passwordEl.value.trim();
+
+  if (!email || !password) {
+    showMessage('Enter email and password.');
+    return;
+  }
+
+  signInWithEmailAndPassword(auth, email, password)
+    .then(() => window.location.href = 'index.html')
+    .catch(err => showMessage(err.message));
+});
+
+// Show error message
+function showMessage(msg) {
+  messageEl.textContent = msg;
+  messageEl.classList.remove('hidden');
+}
