--- a/auth.html
+++ b/auth.html
@@ -1,77 +1,69 @@
-import { auth } from './firebase-config.js';
-import {
-  signInWithEmailAndPassword,
-  createUserWithEmailAndPassword
-} from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
+<!DOCTYPE html>
+<html lang="en" data-theme="light">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sign In</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = { darkMode: 'class' };
+  </script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
+</head>
+<body class="bg-[#f0f2f5] dark:bg-[#121212] text-[#333333] dark:text-gray-100 min-h-screen flex items-center justify-center px-4">
 
-// DOM Elements
-const step1 = document.getElementById('step-1');
-const step2 = document.getElementById('step-2');
-const emailEl = document.getElementById('email');
-const passwordEl = document.getElementById('password');
-const signInBtn = document.getElementById('signInBtn');
-const startRegisterBtn = document.getElementById('startRegisterBtn');
-const completeRegisterBtn = document.getElementById('completeRegisterBtn');
-const messageEl = document.getElementById('authMessage');
+  <div class="absolute top-4 right-4">
+    <button onclick="document.documentElement.classList.toggle('dark')"
+            class="text-sm font-medium bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-white px-3 py-1 rounded">
+      <i class="fas fa-moon mr-1"></i> Toggle Dark Mode
+    </button>
+  </div>
 
-// Start Register Flow (Step 1)
-startRegisterBtn.addEventListener('click', () => {
-  const email = emailEl.value.trim();
-  const password = passwordEl.value.trim();
+  <div class="space-y-8 w-full max-w-md">
 
-  if (!email || !password) {
-    showMessage('Enter email and password to continue.');
-    return;
-  }
+    <!-- Step 1: Email & Password -->
+    <div id="step-1" class="bg-white dark:bg-[#1e1e1e] p-8 rounded-xl shadow-xl">
+      <h2 class="text-2xl font-bold text-center text-[#265e9d] dark:text-white mb-6">Remote Services EOD</h2>
+      <div class="space-y-4">
+        <input id="email" type="email" placeholder="Email"
+               class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white" />
+        <input id="password" type="password" placeholder="Password"
+               class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white" />
+        <button id="signInBtn"
+                class="bg-[#265e9d] text-white w-full py-2 rounded hover:bg-[#1e4b7c] flex items-center justify-center gap-2">
+          <i class="fas fa-sign-in-alt"></i> Sign In
+        </button>
+        <button id="startRegisterBtn"
+                class="bg-gray-200 text-gray-800 dark:bg-gray-600 dark:text-white w-full py-2 rounded hover:bg-gray-300">
+          Register
+        </button>
+        <p id="authMessage" class="text-sm text-red-500 text-center mt-4 hidden"></p>
+      </div>
+    </div>
 
-  createUserWithEmailAndPassword(auth, email, password)
-    .then((userCredential) => {
-      const uid = userCredential.user.uid;
-      localStorage.setItem('temp-uid', uid); // Temporarily store UID
-      step1.classList.add('hidden');
-      step2.classList.remove('hidden');
-    })
-    .catch(err => showMessage(err.message));
-});
+    <!-- Step 2: Additional Profile Info -->
+    <div id="step-2" class="hidden bg-white dark:bg-[#1e1e1e] p-8 rounded-xl shadow-xl">
+      <h2 class="text-xl font-bold text-center text-[#265e9d] dark:text-white mb-6">Tell us about you</h2>
+      <div class="space-y-4">
+        <input id="register-name" type="text" placeholder="Full Name"
+               class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white" />
+        <input id="register-client" type="text" placeholder="Client"
+               class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white" />
+        <input id="register-position" type="text" placeholder="Position"
+               class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white" />
+        <button id="completeRegisterBtn"
+                class="bg-[#265e9d] text-white w-full py-2 rounded hover:bg-[#1e4b7c] flex items-center justify-center gap-2">
+          <i class="fas fa-user-check"></i> Finish Registration
+        </button>
+      </div>
+    </div>
+  </div>
 
-// Finish Register (Step 2)
-completeRegisterBtn.addEventListener('click', () => {
-  const name = document.getElementById('register-name').value.trim();
-  const client = document.getElementById('register-client').value.trim();
-  const position = document.getElementById('register-position').value.trim();
-  const uid = localStorage.getItem('temp-uid');
-
-  if (!name || !client || !position) {
-    showMessage('Please fill out all fields.');
-    return;
-  }
-
-  if (uid) {
-    localStorage.setItem(`profile-${uid}`, JSON.stringify({ name, client, position }));
-    localStorage.removeItem('temp-uid');
-    window.location.href = 'index.html';
-  } else {
-    showMessage("Something went wrong. Try again.");
-  }
-});
-
-// Sign In
-signInBtn.addEventListener('click', () => {
-  const email = emailEl.value.trim();
-  const password = passwordEl.value.trim();
-
-  if (!email || !password) {
-    showMessage('Enter email and password.');
-    return;
-  }
-
-  signInWithEmailAndPassword(auth, email, password)
-    .then(() => window.location.href = 'index.html')
-    .catch(err => showMessage(err.message));
-});
-
-// Show error message
-function showMessage(msg) {
-  messageEl.textContent = msg;
-  messageEl.classList.remove('hidden');
-}
+  <script type="module" src="auth.js"></script>
+</body>
+</html>
