--- a/auth.html
+++ b/auth.html
@@ -17,6 +17,10 @@
 </head>
 <body class="bg-[#f0f2f5] dark:bg-[#121212] text-[#333333] dark:text-gray-100 min-h-screen flex items-center justify-center px-4">
 
+  <div id="loader" class="fixed top-0 left-0 w-full h-full flex justify-center items-center bg-white dark:bg-[#121212] z-50">
+    <div class="animate-spin w-12 h-12 border-4 border-gray-200 dark:border-gray-700 rounded-full"></div>
+  </div>
+  
   <div class="absolute top-4 right-4">
     <button onclick="document.documentElement.classList.toggle('dark')"
             class="text-sm font-medium bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-white px-3 py-1 rounded">
@@ -67,3 +71,38 @@
   <script type="module" src="auth.js"></script>
 </body>
 </html>
+
+
+
+<script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const loader = document.getElementById('loader');
+      loader.classList.add('hidden');
+    });
+  </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
