--- a/auth.html
+++ b/auth.html
@@ -9,6 +9,7 @@
     tailwind.config = { darkMode: 'class' };
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -20,7 +21,7 @@
   <div id="loader" class="fixed top-0 left-0 w-full h-full flex justify-center items-center bg-white dark:bg-[#121212] z-50">
     <div class="animate-spin w-12 h-12 border-4 border-gray-200 dark:border-gray-700 rounded-full"></div>
   </div>
-  
+
   <div class="absolute top-4 right-4">
     <button onclick="document.documentElement.classList.toggle('dark')"
             class="text-sm font-medium bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-white px-3 py-1 rounded">
