--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       darkMode: 'class'
     }
   </script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -25,9 +28,32 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 10px 15px rgba(0, 0, 0, 0.05);
     }
 
+    .section-title {
+      font-size: 1.25rem;
+      font-weight: bold;
+      color: #265e9d;
+    }
+
+    .section-box {
+      margin-bottom: 1rem;
+    }
+    
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .animate-spin {
+      animation: spin 1s linear infinite;
+      border-top-color: #265e9d;
+    }
   </style>
 </head>
 <body class="bg-[#f0f2f5] dark:bg-[#121212] min-h-screen font-inter text-[#333333] dark:text-gray-200">
+
+  <div id="loader" class="fixed top-0 left-0 w-full h-full flex justify-center items-center bg-white dark:bg-[#121212] z-50">
+    <div class="animate-spin w-12 h-12 border-4 border-gray-200 dark:border-gray-700 rounded-full"></div>
+  </div>
 
   <div id="auth-section" class="w-full max-w-sm mx-auto p-8 bg-white dark:bg-[#1e1e1e] rounded-lg shadow-md hidden">
     <h2 class="text-2xl font-bold text-center text-[#265e9d] dark:text-white mb-6">Remote Services</h2>
@@ -39,60 +65,94 @@
   </div>
 
   <main id="main-app-container" class="hidden max-w-6xl mx-auto p-4 sm:p-6 md:p-8 w-full">
-    <section class="bg-white dark:bg-[#1e1e1e] rounded-lg shadow-xl p-6 sm:p-8">
-      <div class="flex flex-col md:flex-row justify-between items-center mb-8 gap-4">
-        <div class="text-center md:text-left">
+    <div class="flex flex-col md:flex-row gap-6">
+
+      <aside class="w-full md:w-1/3 bg-white dark:bg-[#1e1e1e] rounded-lg shadow-md p-6 flex-shrink-0">
+        <div class="mb-6">
           <p class="text-lg text-[#265e9d] dark:text-white"><strong>Name:</strong> <span id="profile-name" class="text-[#333333] dark:text-gray-300">—</span></p>
           <p class="text-lg text-[#265e9d] dark:text-white"><strong>Client:</strong> <span id="profile-client" class="text-[#333333] dark:text-gray-300">—</span></p>
           <p class="text-lg text-[#265e9d] dark:text-white"><strong>Position:</strong> <span id="profile-position" class="text-[#333333] dark:text-gray-300">—</span></p>
         </div>
-        <div class="flex items-center gap-2">
-        <input type="date" id="date-picker" 
-                class="h-10 bg-white dark:bg-[#2a2a2a] text-[#265e9d] dark:text-white font-semibold rounded-md px-3 border border-[#265e9d] dark:border-gray-500 shadow-sm" />
-        
-        <button id="logout-btn" 
-                class="h-10 bg-[#265e9d] hover:bg-[#1e4b7c] text-white font-bold px-4 rounded-md shadow-sm flex items-center gap-2">
+        <div>
+          <h3 class="section-title mb-2">Overall Performance</h3>
+          <div id="overall-performance-cards" class="grid grid-cols-2 gap-4"></div>
+        </div>
+      </aside>
+
+      <section class="flex-1 bg-white dark:bg-[#1e1e1e] rounded-lg shadow-xl p-6 sm:p-8 flex flex-col gap-6">
+
+        <div class="flex justify-between items-center gap-4 flex-wrap mb-4">
+          <input type="date" id="date-picker" 
+            class="h-10 bg-white dark:bg-[#2a2a2a] text-[#265e9d] dark:text-white font-semibold rounded-md px-3 border border-[#265e9d] dark:border-gray-500 shadow-sm" />
+          <button id="logout-btn" 
+            class="h-10 bg-[#265e9d] hover:bg-[#1e4b7c] text-white font-bold px-4 rounded-md shadow-sm flex items-center gap-2">
             <i class="fas fa-sign-out-alt"></i><span>Logout</span>
-        </button>
-</div>
-      </div>
-
-      <div class="section-box mb-8">
-        <h3 class="section-title">Today's Performance</h3>
-        <div id="today-performance-cards" class="grid grid-cols-2 sm:grid-cols-4 gap-4"></div>
-      </div>
-
-      <div class="section-box mb-8">
-        <h3 class="section-title">Overall Performance</h3>
-        <div id="overall-performance-cards" class="grid grid-cols-2 sm:grid-cols-4 gap-4"></div>
-      </div>
-
-      <div class="section-box mb-8">
-        <h3 class="section-title">Add New Task</h3>
-        <div class="flex flex-col sm:flex-row gap-4 mb-4">
-          <input type="text" id="new-task-activity" placeholder="Activity/Task" class="flex-grow p-3 border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white" />
-          <select id="new-task-status" class="p-3 border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#265e9d] flex-shrink-0 dark:bg-[#2a2a2a] dark:text-white">
-            <option value="Not Yet Started">Not Yet Started</option>
-            <option value="Work in Progress">Work in Progress</option>
-            <option value="Pending Approval">Pending Approval</option>
-            <option value="Done">Done</option>
-          </select>
-          <button id="add-task-button" class="bg-[#265e9d] hover:bg-[#1e4b7c] text-white font-bold py-2 px-4 rounded-lg shadow-md flex-shrink-0">
-            <i class="fas fa-plus-circle mr-2"></i>Add Task
           </button>
         </div>
-        <textarea id="highlights-textarea" placeholder="Add highlights for today..." rows="3" class="w-full p-3 border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white mb-4"></textarea>
-        <div class="flex space-x-4">
-          <button id="undo-button" class="bg-gray-500 text-white px-4 py-2 rounded-md disabled:opacity-50" disabled><i class="fas fa-undo"></i></button>
-          <button id="redo-button" class="bg-gray-500 text-white px-4 py-2 rounded-md disabled:opacity-50" disabled><i class="fas fa-redo"></i></button>
-        </div>
-      </div>
 
-      <div class="section-box">
-        <h3 class="section-title">Daily Reports</h3>
-        <div id="reports-container" class="space-y-6"></div>
-      </div>
-    </section>
+        <div class="flex-1 flex flex-col gap-6">
+          <div class="section-box flex-1 flex flex-col">
+            <h3 class="section-title">Today's Performance</h3>
+            <div id="today-performance-cards" class="grid grid-cols-2 sm:grid-cols-4 gap-4 flex-1"></div>
+          </div>
+
+          <div class="flex-1 flex flex-col">
+            <h3 class="section-title">Add New Task</h3>
+            <div class="flex flex-wrap gap-2 mb-2 items-center">
+              <input
+                type="text"
+                id="new-task-activity"
+                placeholder="Activity/Task"
+                class="flex-grow min-w-[180px] h-11 px-3 border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white"
+              />
+              <select
+                id="new-task-status"
+                class="h-11 px-2 w-[160px] border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white"
+              >
+                <option value="Not Yet Started">Not Yet Started</option>
+                <option value="Work in Progress">Work in Progress</option>
+                <option value="Pending Approval">Pending Approval</option>
+                <option value="Done">Done</option>
+              </select>
+              <button
+                id="add-task-button"
+                class="h-11 px-4 w-[140px] bg-[#265e9d] hover:bg-[#1e4b7c] text-white font-bold rounded-md shadow-md flex items-center justify-center"
+              >
+                <i class="fas fa-plus-circle mr-2"></i>Add Task
+              </button>
+              <button
+                id="undo-button"
+                class="bg-gray-500 text-white px-3 py-2 rounded-md disabled:opacity-50"
+                disabled
+              >
+                <i class="fas fa-undo"></i>
+              </button>
+
+              <button
+                id="redo-button"
+                class="bg-gray-500 text-white px-3 py-2 rounded-md disabled:opacity-50"
+                disabled
+              >
+                <i class="fas fa-redo"></i>
+              </button>
+            </div>
+
+            <textarea
+              id="highlights-textarea"
+              placeholder="Add highlights for today..."
+              rows="3"
+              class="w-full p-3 border border-gray-300 dark:border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#265e9d] dark:bg-[#2a2a2a] dark:text-white mb-1 flex-1"
+            ></textarea>
+          </div>
+
+          <div class="section-box flex-1 flex flex-col">
+            <h3 class="section-title">Daily Reports</h3>
+            <div id="reports-container" class="space-y-6 flex-1 overflow-y-auto"></div>
+          </div>
+        </div>
+      </section>
+
+    </div>
   </main>
 
   <div id="confirmation-modal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full flex justify-center items-center z-50 hidden">
@@ -104,7 +164,13 @@
       </div>
     </div>
   </div>
-<!-- Firebase + Logic -->
+  
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const loader = document.getElementById('loader');
+      loader.classList.add('hidden');
+    });
+  </script>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
     import {
@@ -151,7 +217,7 @@
     onAuthStateChanged(auth, user => {
       if (user) {
         showApp();
-        renderApp(); // assuming this exists in script.js
+        renderApp(); // assumes script.js is already handling it
       } else {
         showLogin();
       }
