--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
         <div class="modal-content">
             <span class="modal-close-btn">&times;</span>
             <h3 class="modal-title">Add New Activity</h3>
-            <input type="text" id="activity-input" placeholder="Enter activity name" required>
+            <input type="text" id="activity-input" placeholder="Enter Job no./ Qoute no." required>
+            <textarea id="activity-description-input" placeholder="Enter Activity Description"></textarea>
             <button id="add-activity-btn">Add Activity</button>
         </div>
     </div>
