--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="auth.css">
     <link rel="icon" type="image/png" href="logo.png">
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 </head>
 
 <div class="floating-btn-container">
@@ -24,7 +27,8 @@
             <button class="modal-close-btn" aria-label="Close version history">&times;</button>
         </div>
         <div id="version-button-container" class="version-btn">
-            <button class="vbtn active" data-version="v2.0">V2.0 Latest Version</button>
+            <button class="vbtn active" data-version="v2.1">V2.1 Latest Version</button>
+            <button class="vbtn active" data-version="v2.0">V2.0</button>
             <button class="vbtn" data-version="v1.1">V1.1</button>
             <button class="vbtn" data-version="v1.0">V1.0</button>
         </div>
@@ -86,6 +90,7 @@
                         </div>
                     </div>
                     <button id="logout-btn" class="logout-btn">Logout</button>
+                    
                 </div>
 
                 <div class="user-info">
@@ -114,6 +119,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="highlights-section">
+    <div class="highlights-header">
+        <span>Today's Highlight</span>
+    </div>
+    <div class="highlight-content">
+        <div id="highlight-display" class="highlight-display"></div>
+        <div id="highlight-editor" class="highlight-edit" style="display: none;">
+            <div id="highlight-quill"></div>
+        </div>
+        <div class="highlight-actions">
+            <button id="highlight-edit-btn" class="highlight-edit-btn">
+                <i class="fas fa-edit"></i>
+            </button>
+            <button id="highlight-save-btn" class="highlight-save-btn" style="display: none;">
+                <i class="fas fa-save"></i>
+            </button>
+            <button id="highlight-cancel-btn" class="highlight-cancel-btn" style="display: none;">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+    </div>
+</div>
             </div>
             
             <div class="right-panel">
@@ -191,5 +218,7 @@
 
     <script type="module" src="script.js"></script>
     <script type="module" src="version.js"></script>
+    <script type="module" src="highlight.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
 </body>
 </html>
